# reltio-mcp-server

./: .gitignore  Dockerfile  Dockerfile.test.unit  NOTICE  README.md  docker-compose-test.yaml  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements_tests.txt  run_tests.sh  setup.bat  setup.sh
clients/agent_with_mcp/: agent_client.py  requirements.txt
clients/sse/: mcp_claude_client.py  mcp_gemini_client.py  mcp_openai_client.py
clients/streamable_http/: mcp_claude_client.py  mcp_gemini_client.py
src/: constants.py  env.py  server.py
src/tools/: activity.py  entity.py  match.py  relation.py  search.py  system.py  tenant_config.py  util.py  workflow.py
src/util/: activity_log.py  api.py  auth.py  exceptions.py  models.py
tests/: README.md
tests/unit/: test_api.py  test_exceptions.py  test_main.py  test_server.py  test_server_error_handling.py  test_server_structure.py  test_tools_activity.py  test_tools_entity.py  test_tools_match.py  test_tools_relation.py  test_tools_search.py  test_tools_system.py  test_tools_tenant_config.py  test_tools_workflow.py  test_util_auth.py
